# EHRI-metadata-check

./: .gitignore  README.md  dashboard.py  main.py  pyproject.toml  validator.py
.github/workflows/: test.yaml
.streamlit/: config.toml
checks/: accessibility.py  html_validity.py  metadata.py
src/ehri_metadata_check/: accessibility.py  dashboard.py  metadata.py  validation.py  validator.py
tests/: test_accessibility.py  test_validation.py
