[project]
name = "ehri-metadata-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "extruct>=0.18.0",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rich>=14.3.1",
    "streamlit>=1.53.1",
    "typer>=0.21.1",
    "watchdog>=6.0.0",
]
