[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9,<0.10.0"]

[project]
name = "ehri-metadata-check"
version = "0.1.0"
description = "A tool for validating whether an EHRI website has correct metadata."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Xu Xiao", email = "xiao.xu@niod.knaw.nl" }]
dependencies = [
    "aiohttp>=3.11.0",
    "beautifulsoup4>=4.14.3",
    "extruct>=0.18.0",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rich>=14.3.1",
    "streamlit>=1.53.1",
    "typer>=0.21.1",
    "watchdog>=6.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "ruff>=0.15.0"]
